--- a/package.json
+++ b/package.json
@@ -20,10 +20,14 @@
   "homepage": "https://github.com/azizmg98/Yam3a-API#readme",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.7",
     "mongoose-slug-plugin": "^2.1.0",
-    "nodemon": "^2.0.15"
+    "multer": "^1.4.4",
+    "nodemon": "^2.0.15",
+    "passport": "^0.5.2"
   }
 }
