--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/azizmg98/Yam3a-API#readme",
   "dependencies": {
+    "@react-native-community/datetimepicker": "^6.0.2",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
