--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "mongoose-slug-plugin": "^2.1.0",
     "multer": "^1.4.4",
     "nodemon": "^2.0.15",
-    "passport": "^0.5.2"
+    "passport": "^0.5.2",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0"
   }
 }
